# i9000

./: README.md  render.yaml
api/: .env.dist  .gitignore  Dockerfile  base.Dockerfile  main.py  pyproject.toml
api/utils/: api.py  cf_signed_url.py  mb.py  schemas.py  tracks.py
database/: .env.dist  package-lock.json  package.json  seed.ts  tsconfig.json
database/fake_migrations/: v1.sql  v2.sql  v3.sql  v4.sql  v5.sql  v6.sql  v7.sql
graphile/: .gitignore  index.ts  package-lock.json  package.json  schema.graphql  tsconfig.json
svelte/: .env.dist  .eslintrc.cjs  .gitignore  .prettierrc  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
svelte/public/: offline.html
svelte/public/.well-known/: assetlinks.json
svelte/src/: App.svelte  internal.ts  main.ts
svelte/src/assets/: colors.scss  custom.scss  dims.scss  forms.scss  global.scss  toast.scss  typography.scss
svelte/src/components/: Auth.svelte  AutosizedText.svelte  Tab.svelte  Toolbar.svelte  TypingWaiter.svelte
svelte/src/components/albumComponents/: AlbumRow.svelte  Albums.svelte
svelte/src/components/editComponents/: TagEditor.svelte  TagInput.svelte
svelte/src/lib/: albumUtils.ts  auth.ts  availableCols.ts  commands.ts  db.ts  importer.ts  interfaces.ts  keyboard.ts  playUtils.ts  player.ts  relationshipUtils.ts  releaseUtils.ts  tab.ts  tansuStore.ts  unaccent.ts  utils.ts  views.ts
tools/: .env.dist  .gitignore  backup.sh  convert_logo.sh  do_backup.py  pyproject.toml  restore_db.sh  symlink_mount.py  utils.py
tools/logo/: logo.ai
(+66 files in other folders)
